Fix for views( change regiond,  remove problem with messages overflow, give bigger space for right panel, fix chats last message in case this message is big)

--- a/Chat/ClientApp/src/app/Components/home/home.component.css
+++ b/Chat/ClientApp/src/app/Components/home/home.component.css
@@ -1,4 +1,5 @@
 ﻿/*#region main page container*/
+
 .main-container {
     height: 100vh;
     width: 100vw;
@@ -8,15 +9,95 @@
     overflow-y: hidden;
 }
 /*#endregion */
+/*#region Left part with chats*/
+.chats-panel {
+  width: 25%;
+  height: 100%;
+  display: flex;
+  align-self: flex-start;
+  justify-content: start;
+  flex-direction: column;
+  
+
+}
+.chats-container {
+    display: flex;
+    overflow-y:auto;
+    height: calc(100vh - 100px);
+    flex-direction: column;
+    min-height: min-content; 
+}
+.chats-title {
+    display: flex;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+
+}
+.chat {
+    display: flex;
+    width: 100%;
+    height: 110px;
+    min-height: 110px;
+    flex-direction: column;
+    justify-content: center;
+    cursor: pointer;
+}
+.chat:hover {
+  background-color: var(--second-bg-color);
+} 
+.chat-sender-name {
+  margin-top: 10px;
+  margin-left: 10px;
+  color: var(--secondary-text-color)
+}
+.chat-last-message {
+  margin-top: 3px;
+  margin-left: 10px;
+  
+  color: var(--common-text-color)
+}
+.chats-empty {
+  align-self: center;
+  margin-top: 55%;
+
+}
+/*#endregion */
 /*#region Messege read write panel*/
 .messenger-main-panel {
-    width: 70%;
+    width: 65%;
     height: 100%;
     display: flex;
     align-self: flex-start;
     padding-left: 3%;
     padding-bottom: 2%;
     flex-direction: column;
+    border-left: 1px solid var(--second-bg-color);
+    z-index: 2;
+}
+.bg-image {
+  position: absolute;
+  z-index: -10;
+  pointer-events: none;
+  height: 100vh;
+  width: 65%;
+  left: 25%;
+}
+.bg-image img {
+  z-index: -10;
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+.bg-image .shadow {
+  height: 100%;
+  width: 100%;
+  z-index: -9;
+  background: var(--main-bg-color);
+  opacity: 0.7;
+  position: absolute;
 }
 .current-chat-title {
   display: flex;
@@ -30,13 +111,18 @@
   display: flex;
   margin-top: auto;
   flex-direction: column;
-  width: 75%;
+  width:75% ;
+  overflow-y: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  max-height: calc(97% - 200px);
 }
 .my-messages {
   display: flex;
   max-width: 75%;
   margin-left: auto;
   margin-top: 15px;
+  word-wrap: anywhere;
 
 }
 .other-messages {
@@ -44,6 +130,7 @@
   max-width: 75%;
   margin-right: auto;
   color: white;
+  word-wrap: anywhere;
 }
 .input-message-container {
   display: flex;
@@ -74,59 +161,6 @@
   margin-bottom: 35%;
 }
 /*#endregion*/
-/*#region Left part with chats*/
-.chats-panel {
-  width: 25%;
-  height: 100%;
-  display: flex;
-  align-self: flex-start;
-  justify-content: start;
-  flex-direction: column;
-}
-.chats-container {
-    display: flex;
-    overflow-y:auto;
-    height: calc(100vh - 100px);
-    flex-direction: column;
-    min-height: min-content; 
-}
-.chats-title {
-    display: flex;
-    width: 100%;
-    height: 100px;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-
-}
-.chat {
-    display: flex;
-    width: 100%;
-    height: 110px;
-    min-height: 110px;
-    flex-direction: column;
-    justify-content: center;
-}
-.chat:hover {
-  background-color: var(--second-bg-color);
-} 
-.chat-sender-name {
-  margin-top: 10px;
-  margin-left: 10px;
-  color: var(--secondary-text-color)
-}
-.chat-last-message {
-  margin-top: 3px;
-  margin-left: 10px;
-  
-  color: var(--common-text-color)
-}
-.chats-empty {
-  align-self: center;
-  margin-top: 55%;
-
-}
-/*#endregion */
 /*#region scrolls for chats list*/
 /* Scroll fo chats mozilla*/
 .sc2 {
@@ -150,13 +184,13 @@
 /*#endregion */
 /*#region right-nav-panel*/
 .right-nav-panel {
-  width: 5%;
+  width: 10%;
   height: 100%;
   display: flex;
   align-self: flex-start;
-  align-items: flex-start;
   justify-content: center;
   flex-direction: column;
+  z-index: 10;
 }
 .right-nav-menu-text {
   width: 0;
@@ -171,6 +205,8 @@
   flex-direction: column;
   padding: 0;
   font-size: 45px;
+  margin: auto;
+  width: 50px;
 }
 .right-nav-panel ul>li {
   display: flex;
@@ -178,20 +214,21 @@
   align-items: center;
   padding: 5px;
   margin-bottom: 10px;
-  transition: margin-left 1s ease-out 100ms
+  transition: margin-left 1s ease-out 100ms;
+  cursor: pointer;
 }
 .right-nav-panel ul>li>* {
   padding: 0;
   margin: 0;
 }
 .right-nav-panel ul>li:hover {
-    margin-left: -75px;
-    transition: margin-left 1s ease-out 100ms
+    margin-left: -100px;
+    transition: margin-left 1s ease-out 100ms; 
 }
 .right-nav-panel ul>li:hover .right-nav-menu-text {
   width: 100px;;
   opacity: 1;
-  transition: width 0.2s ease-out 100ms, opacity 1s ease-out 100ms
+  transition: width 0.2s ease-out 100ms, opacity 1s ease-out 100ms;
 }
 .right-nav-panel ul>li> ion-icon {
   margin-right: 3px;
